--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,8 @@
 services:
   - type: web
-    name: quanlyvanhanhtoanha-buildmate
+    name: quanlyvanhanhtoanha
     env: docker
     plan: free
-    dockerfilePath: ./Dockerfile
+    branch: main
+    dockerfilePath: Dockerfile
+    region: oregon
